Revision history for perl distribution Object-Signature-Portable

v0.1.5
  [Other Changes]
  - Tests require Test::Differences, since some CPAN::Testers
    environments seem to be installing Test::Most without it.

v0.1.4  2014-09-02
  [Documentation]
  - Added note about alternative encoders.

v0.1.3  2014-08-16
  [Documentation]
  - Fixed typos in Changes.

  [Other Changes]
  - Fixed license in Makefile.PL to make CPANTS happy.

v0.1.2  2014-06-04
  [Documentation]
  - Fixed typos in POD.

  - Added requirements to README.

  [Other Changes]
  - Added QA tests to the git repo.

v0.1.1  2014-03-11
  [Documentation]
  - Added subsections to the LIMITATIONS section about Portability and
    Security, and moved a note about the hash algorithm to the latter.

  - Removed details from README.

  [Other Changes]
  - Removed unnecessary dependency from Makefile.PL.

v0.1.0  2013-12-04

  - First release.